test/errhandling/try-bang.good
should not continue
try-bang.chpl:7: error: uncaught error
