test/errhandling/try-bang.chpl
proc throwAnError() throws {
  throw new Error();
}

writeln("should not continue");

try! throwAnError();

writeln("continued");
